Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ features advanced functional concepts like</p>
 </ul>
 
 <h2>
+<a id="try-eval-online" class="anchor" href="#try-eval-online" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://martinring.github.io/eval-lang/tryEval.html">Try <strong>eval</strong> online!!</a>
+</h2>
+
+<h2>
 <a id="optimized-language-core" class="anchor" href="#optimized-language-core" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Optimized Language Core</h2>
 
 <p>What further differentiates <strong>eval</strong> from other mainstream languages, is that
