--- a/tryEval.html
+++ b/tryEval.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Eval-lang by martinring</title>
+    <title>eval by martinring</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Eval-lang</h1>
+        <h1>eval</h1>
         <h2>The eval Programming Language</h2>
         <a href="https://github.com/martinring/eval-lang" class="button"><small>View project on</small> GitHub</a>
       </div>
